Fix margin spacing on header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 14px 95px 0px 95px;
+    margin: 14px 130px;
 }
 
 .logo {
@@ -41,7 +41,7 @@ a {
 }
 
 .welcome-container {
-    margin: 60px 100px 60px 100px;
+    margin: 60px 150px;
     display: flex;
     gap: 30px;
 }
